# SentinelMCP

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sentinelmcp/: circuit_breaker.py  dashboard.py  database.py  main.py  proxy.py  scrubber.py
tests/: test_circuit_breaker.py  test_scrubber.py
tests/integration/: test_secret.py
