[project]
name = "sentinelmcp"
version = "0.1.0"
description = ""
authors = [
    {name = "mbilalnasir751", email = "mbilalnasir751@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "rich>=15.0.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.0"
pytest-asyncio = ">=1.4.0"